# rv32e-hitsz

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  flake.nix  info.txt  rust-toolchain.toml
inc/: dut.h  emu.h
rvemu/: Cargo.toml
src/: lib.rs  main.rs
src/cxx/: main.cxx
src/rust/: emu.rs  lib.rs  main.rs
src/rust/rvemu/: cpu.rs  dram.rs  instr.rs  irom.rs  mod.rs
src/rvemu/: cpu.rs  dram.rs  mod.rs
src/sv/: miniRV_SoC.sv
