[package]
name = "rvemu_hitsz"
version = "0.1.0"
edition = "2021"


[lib]
name = "rvemu_hitsz"
path = "src/rust/lib.rs"
# crate-type = ["staticlib"]

[[bin]]
name = "emu"
path = "src/rust/emu.rs"

[[bin]]
name = "coe"
path = "src/rust/coe.rs"

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
rand = "0.8.5"
